# podenv

./: .gitignore  .gitmodules  .hlint.yaml  .mergify.yml  .weeder.dhall  .weeder.toml  CHANGELOG.md  Makefile  README.md  default.nix  default.podenv  flake.nix  podenv.cabal  setup.py  stack.yaml
.github/workflows/: main.yml  release.yml
app/: Main.hs
docs/: generate.py
docs/discussions/: declarative-containers.md  dhall-configuration.md  roadmap.md
docs/howtos/: contribute.md  image.md  vpn.md
docs/references/: command-line.md  configuration.md  release-checklist.md  userns.md
docs/tutorials/: create.md  edit.md  install.md  nix.md  rawhide.md  use.md
hub/: Podenv.dhall  Prelude.dhall  README.md  package.dhall
hub/Applications/: _audinux.dhall  _ccrdaMAO.dhall  _driEditor.dhall  _graphicEditor.dhall  ardour.dhall  audacity.dhall  blender.dhall  brave.dhall  centos.dhall  cgoban.dhall  chromium.dhall  chroot.dhall  debian.dhall  eglgears.dhall  electrum.dhall  fbrnch.dhall  fedora.dhall  feh.dhall  ffmpeg.dhall  firefox.dhall  flutter.dhall  freecad.dhall  gimp.dhall  google-chrome.dhall  gscan2pdf.dhall  guix.dhall  gworldclock.dhall  hydrogen.dhall  inkscape.dhall  katrain.dhall  kicad.dhall  kigo.dhall  librecad.dhall  libreoffice.dhall  linphone.dhall  lmms.dhall  maim.dhall  mplayer.dhall  mumble.dhall  mupdf.dhall  (+34 more)
hub/Builders/: debian.dhall  fedora.dhall  guix.dhall  mkUser.dhall  nix.dhall
hub/schemas/: Application.dhall  ApplicationResource.dhall  Capabilities.dhall  Flakes.dhall  Metadata.dhall  Network.dhall  Runtime.dhall  package.dhall
podenv/: capabilities.py  config.py  context.py  defaults.py  dhall.py  env.py  main.py  pod.py  security.py  tasks.py
podenv/dhall/: defaults.dhall  package.dhall  schemas.dhall  types.dhall
podenv/dhall/defaults/: BuildEnv.dhall  Capabilities.dhall  Env.dhall  Task.dhall
podenv/dhall/schemas/: BuildEnv.dhall  Capabilities.dhall  Config.dhall  Environ.dhall  Mount.dhall  Task.dhall  User.dhall
podenv/dhall/types/: BuildEnv.dhall  Capabilities.dhall  Config.dhall  Env.dhall  Environ.dhall  File.dhall  Mount.dhall  System.dhall  Task.dhall  User.dhall  Volume.dhall
podenv/dhall/types/Tasks/: Copy.dhall
schemas/: Application.dhall  Capabilities.dhall  ContainerBuild.dhall  Provider.dhall  Runtime.dhall  System.dhall  nix.dhall  package.dhall
src/: Podenv.hs
src/Podenv/: Application.hs  Build.hs  Capability.hs  Config.hs  Context.hs  Dhall.hs  Env.hs  Image.hs  Main.hs  Notifications.hs  Prelude.hs  Runtime.hs  Version.hs
src/Podenv/Dhall/: TH.hs
test/: Spec.hs  Static.hs  config.dhall  golden.dhall  golden.txt  headless.dhall
tests/: __init__.py  test_cli.py  test_config.py  test_env.py
tests/config/: capabilities.dhall  common-image.dhall  container-file.dhall  hubconfigs.dhall  minimal.dhall
